removed inline css from tradesman

--- a/apps/renovation/src/app/app.component.html
+++ b/apps/renovation/src/app/app.component.html
@@ -1,4 +1,6 @@
 
+
+<ngx-loading-bar ref="router" [height]="'5px'" [color]="'green'"></ngx-loading-bar>
 <tvs-home></tvs-home>
 
 <!-- <router-outlet></router-outlet> -->
