--- a/apps/renovation/src/app/shared/layouts/front-blocks/front-blocks.component.html
+++ b/apps/renovation/src/app/shared/layouts/front-blocks/front-blocks.component.html
@@ -25,7 +25,7 @@
         <mat-card-actions style="padding: 0px;" layout="row" layout-align="end center">
           <div>
             <button style="float: left;padding: 14px;margin-left: 10px; color: #a3a3f7;" mat-button>
-              <tvs-draw-home [master]="master"></tvs-draw-home>
+              <!-- <tvs-draw-home [master]="master"></tvs-draw-home> -->
               <!-- Draw Now -->
             </button>
           </div>
@@ -66,7 +66,7 @@
         <mat-card-actions style="padding: 0px;" layout="row" layout-align="end center">
           <div>
             <button style="float: left;padding: 14px;margin-left: 10px; color: #a3a3f7;" mat-button>
-              <tvs-draw-home [master]="master2"></tvs-draw-home>
+              <!-- <tvs-draw-home [master]="master2"></tvs-draw-home> -->
               <!-- Draw Now -->
             </button>
           </div>
@@ -105,7 +105,7 @@
         <mat-card-actions style="padding: 0px;" layout="row" layout-align="end center">
           <div>
             <button style="float: left;padding: 14px;margin-left: 10px; color: #a3a3f7;" mat-button>
-              <tvs-draw-home [master]="master3"></tvs-draw-home>
+              <!-- <tvs-draw-home [master]="master3"></tvs-draw-home> -->
               <!-- Draw Now -->
             </button>
           </div>
@@ -142,7 +142,7 @@
         <mat-card-actions style="padding: 0px;" layout="row" layout-align="end center">
           <div>
             <button style="float: left;padding: 14px;margin-left: 10px; color: #a3a3f7;" mat-button>
-              <tvs-draw-home [master]="master"></tvs-draw-home>
+              <!-- <tvs-draw-home [master]="master"></tvs-draw-home> -->
               <!-- Draw Now -->
             </button>
           </div>
