--- a/apps/renovation/src/app/shared/layouts/slider/slider.component.html
+++ b/apps/renovation/src/app/shared/layouts/slider/slider.component.html
@@ -49,7 +49,7 @@
                     <div class="card-img-overlay d-flex flex-column" style="width:220px;float: right;margin-top: auto;">
                         <p class="card-text">Last updated 3 mins ago</p>
                       <a class="btn btn-success">
-                          <tvs-draw-home [master]="master"></tvs-draw-home>
+                          <!-- <tvs-draw-home [master]="master"></tvs-draw-home> -->
                       </a>
                     </div>
                   </div>
