--- a/apps/renovation/src/app/main/microservices/draw-home/draw-home.component.css
+++ b/apps/renovation/src/app/main/microservices/draw-home/draw-home.component.css
@@ -1,3 +1,133 @@
+
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+/*
+Start Custom css
+*/
+
+.layout-selection {
+  width: 98%;
+  font-size: 1.1em;
+  height: 38px;
+  background-color: #161b1d;
+  color: white;
+  border: none;
+  font-weight: 100;
+}
+
+.layout-selection-bg {
+  margin: 0px;
+  background-color: #161b1d;
+}
+
+.house-type-selection {
+  font-size: 1.1em;
+  margin-left: 17px;
+  height: 25px;
+  width: 140px;
+  margin-top: 8px;
+  background-color: #363e45;
+  color: white;
+  border: none;
+  font-weight: 100;
+}
+.house-type-selection-bg{
+  height: 38px;background-color: #23282f;
+}
+.left-pane-config{
+  background-color: #161b1d !important;color:#d8dee3;height: 100%;
+}
+.zero-padding{
+  padding: 0px;
+}
+.house-type-config{
+  margin-left: 0px;font-weight: 100;text-align: right;
+}
+.house-type-config-color{
+  color: #999!important;
+}
+.house-type-config-input{
+  margin-left: 8px;padding: 8px;height: 22px;border: 1px solid !important;border-color: #363e45 !important;text-align: right;width: 50px;background-color: #161b1d;border: 0px;color: white;font-weight: 100;
+}
+.middle-pane-config{
+  background: #23282f !important;color:#d8dee3;height: 100%;
+}
+.middle-pane-config-topbar{
+  height: 38px;
+}
+.middle-pane-config-topbar button{
+  height: 100%;width: 38px;background-color: #23282f;color: white;border: 0;border-right: 1px solid;border-color: #363e45;
+}
+hr{
+  background-color: #363e45;
+}
+.window{
+  padding: 0;text-align: right;padding-right: 8px;padding-top: 3px;
+}
+
+.top-rular-bg{
+  height: 50px;background-color: #23282f;border-bottom:1px solid green;
+}
+.top-tool{
+  height: 40px;background-color: #23282f;text-align: center;
+}
+.top-pointer{
+  font-size: 15px;padding-top: 4px;padding-bottom: 4px;background: #528400;margin-top: 10px;margin-right: 1px;
+}
+.top-crop{
+  background-color: #363e45;color: white;font-weight: 100;margin-left: 2px;border: 1px solid !important;border-color: #363e45 !important;height: 30px;width: 30px;margin-top: 10px;margin-right: 3px;
+}
+.zoom-size{
+  padding-right: 10px;padding-left: 10px;font-size: 1.1em;height: 30px;background-color: #363e45;color: white;border: none;font-weight: 100;margin-top: 10px;
+}
+.btn-export{
+  font-size: 15px;padding-top: 4px;padding-bottom: 4px;background: #528400;float: right;margin-top: 8px;margin-right: 21px;
+}
+.btn-download{
+  background-color: #363e45;color: white;font-weight: 100;margin-left: 2px;border: 1px solid !important;border-color: #363e45 !important;float: right;height: 30px;width: 30px;margin-top: 8px;margin-right: 10px;border-radius: 3px;
+}
+.main-window-margin{
+  margin-left: -18px;
+}
+.main-view{
+  height: 100vh;
+}
+.cost-color{
+  color: #999;
+}
+
+/*
+End Custom css
+*/
+
+  ng-scrollbar.virtual-scroll {
+    --scrollbar-size: 8px;
+    --scrollbar-thumb-color: gray;
+    --scrollbar-hover-size: 12px;
+    --scrollbar-track-color: rgba(0, 0, 0, 0.05);
+    --scrollbar-border-radius: 10px;
+
+    margin: 1em;
+    height: 200px;
+    max-height: 200px;
+    border-radius: 6px;
+    border: 1px solid gray;
+    overflow: hidden;
+  }
+
+  .inner {
+    width: 140%;
+  }
+
+  .example-item {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding-left: 2em;
+
+    
+
+  }
 .wrapper {
   display: flex;
   width: 100%;
@@ -38,7 +168,7 @@ a[data-toggle="collapse"] {
   }
 }
 
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
 
 
 body {
@@ -115,7 +245,7 @@ p {
     height: 100% !important;
   }
   .e-splitter.e-splitter-horizontal .e-pane.e-static-pane, .e-splitter.e-splitter-vertical .e-pane.e-static-pane{
-     flex-basis: 60% !important; 
+     flex-basis: 65% !important; 
   }
 
   .e-splitter.e-splitter-horizontal .e-pane.e-scrollable, .e-splitter.e-splitter-vertical .e-pane.e-scrollable{
