worked on services

--- a/apps/renovation/src/app/main/microservices/components/find-tradesmen/find-tradesmen.component.scss
+++ b/apps/renovation/src/app/main/microservices/components/find-tradesmen/find-tradesmen.component.scss
@@ -6,8 +6,8 @@ Start tradesman custom
 }
 
 .category-margin {
-  margin-right: 0px;
-  margin-left: 0px;
+  margin-right: 0px !important;
+  margin-left: 0px !important;
 }
 
 .category-box-padding {
