removed dh component

--- a/apps/renovation/src/app/main/microservices/draw-home/draw-your-home/draw-your-home.component.html
+++ b/apps/renovation/src/app/main/microservices/draw-home/draw-your-home/draw-your-home.component.html
@@ -1,4 +1,4 @@
-<ngx-loading-bar [height]="'5px'" [color]="'green'" [diameter]="'30px'"></ngx-loading-bar>
+<!-- <ngx-loading-bar [height]="'5px'" [color]="'green'" [diameter]="'30px'"></ngx-loading-bar> -->
 
 <div class="container-fluid">
     <div class="row">
