--- a/apps/renovation/src/app/main/microservices/tradesman/favorite-list/favorite-list.component.scss
+++ b/apps/renovation/src/app/main/microservices/tradesman/favorite-list/favorite-list.component.scss
@@ -2,3 +2,42 @@
   .btn-change {
     display:none
   }
+
+  .card-img-wrap {
+    overflow: hidden;
+    position: relative;
+  }
+
+  .card-img-wrap:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.3);
+    opacity: 0;
+    transition: opacity .25s;
+  }
+
+  .card-img-wrap img {
+    transition: transform 2.25s;
+    width: 100%;
+  }
+
+  .card-img-wrap:hover img {
+    transform: scale(2.2);
+  }
+
+  .card-img-wrap:hover:after {
+    opacity: 1;
+  }
+
+  .card:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+
+    transition: transform 1.25s;
+    width: 100%;
+  }
